# assetxchain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.test  README.md  metadata.json  note.txt  sto_ipfs.note
contracts/market_orderbook/: Cargo.toml  lib.rs
contracts/market_standard/: Cargo.toml  lib.rs
contracts/zhushui/: Cargo.toml  lib.rs
node/: Cargo.toml
node/src/: asset_trie.rs  chain_spec.rs  command.rs  data_asset_rpc.rs  dataasset.rs  kvdb_hashdb.rs  main.rs  mpt.rs  mpt_manager.rs  rpc.rs  service.rs  trie_db_mpt.rs
pallets/collaterals/: Cargo.toml
pallets/collaterals/src/: benchmarking.rs  lib.rs  weights.rs
pallets/dataassets/: Cargo.toml
pallets/dataassets/src/: benchmarking.rs  collateral.rs  digest_item.rs  lib.rs  types.rs  weights.rs  weights_load.rs
pallets/incentive/: Cargo.toml
pallets/incentive/src/: benchmarking.rs  lib.rs  weights.rs
pallets/markets/: Cargo.toml
pallets/markets/src/: benchmarking.rs  lib.rs  original_lib.rs  weights.rs
pallets/rewards/: Cargo.toml
pallets/rewards/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/shared_traits/: Cargo.toml
pallets/shared_traits/src/: lib.rs
pallets/storage_ipfs/: Cargo.toml
pallets/storage_ipfs/src/: lib.rs
pallets/validator/: Cargo.toml
pallets/validator/src/: lib.rs
rocksdb_1m/chains/dev/db/full/: 000120.sst  IDENTITY  LOG  MANIFEST-000009
runtime/: Cargo.toml
runtime/src/: apis.rs  asset_market_extension.rs  benchmarks.rs  custom_header.rs  genesis_config_presets.rs  lib.rs  runtime_api.rs
runtime/src/configs/: mod.rs
