[package]
name = "market_standard"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
ink.workspace = true
scale-info.workspace = true
codec.workspace = true
serde.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "codec/std",
    "serde/std",
]