[package]
name = "market_standard"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["guozheng <your-email@example.com>"]
publish = false 

[dependencies]
ink.workspace = true
scale-info.workspace = true
codec.workspace = true
serde.workspace = true

[lib]
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "codec/std",
    "serde/std",
]