[package]
name = "pallet-dataassets"
version = "0.1.0"
description = "Data assets management pallet with independent asset state tree"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
log = { workspace = true }
pallet-timestamp.workspace = true 

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
pallet-timestamp = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]