[package]
name = "pallet-shared-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
scale-info = { features = ["derive"], workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
]