[package]
name = "pallet-validator"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
scale-info = { features = ["derive"], workspace = true }
sp-std.workspace = true
pallet-session.workspace = true
sp-staking.workspace = true
sp-runtime.workspace = true
pallet-im-online.workspace = true
sp-session.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-session/std",
	"sp-staking/std",
	"sp-runtime/std",
	"pallet-im-online/std",
	"sp-session/std",
]